--- a/package.json
+++ b/package.json
@@ -3,6 +3,15 @@
 	"displayName": "androidlauncher",
 	"description": "Run Android emulator to test your apps from VSCode.",
 	"version": "0.0.1",
+	"author": {
+		"name": "Daniel Queiroz"
+	},
+	"publisher": "Dannark",
+	"icon": "images/icon.png",
+	"galleryBanner": {
+		"color": "#380e7f",
+		"theme": "dark"
+	},
 	"engines": {
 		"vscode": "^1.45.0"
 	},
@@ -37,5 +46,15 @@
 		"typescript": "^3.8.3",
 		"vscode-test": "^1.3.0"
 	},
-	"dependencies": {}
+	"dependencies": {},
+	"license": "SEE LICENSE IN LICENSE.txt",
+	"homepage": "https://github.com/Dannark/Android-Launcher-for-VSCode/blob/master/README.md",
+	"bugs": {
+		"url": "https://github.com/Dannark/Android-Launcher-for-VSCode/issues",
+		"email": "dqpontes@gmail.com"
+	  },
+	  "repository": {
+		"type": "git",
+		"url": "https://github.com/Dannark/Android-Launcher-for-VSCode.git"
+	  }
 }
